--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
@@ -15,8 +15,9 @@
     <div class="max-w-7xl mx-auto flex items-center justify-between py-4">
       <!-- Logo -->
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <h1 class="text-[24px] font-[poppins] font-semibold text-[#00509E]">Pinnacl</h1>
-        <h2 class="text-[20px] font-[poppins] font-light text-[#2D5BFF]">Schools</h2>
+        <img src="/logo.svg" alt="" class="w-[50px]">
+        <img src="/Scholaris.svg" alt="" class="w-[110px]">
+        <!-- <h1 class="text-[24px] font-[poppins] font-semibold text-[#00509E]">Scholaris</h1> -->
       </a>
       <!-- Menu -->
       <ul class="hidden md:flex md:items-center md:space-x-8">
@@ -466,9 +467,9 @@
   <footer>
     <div class="flex flex-col md:flex-row justify-between p-4 gap-4 max-w-screen-xl mx-auto pt-40 px-8 pb-10">
       <div class="flex flex-col gap-4">
-        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <h1 class="text-[24px] font-[poppins] font-semibold text-[#00509E]">Pinnacl</h1>
-        <h2 class="text-[20px] font-[poppins] font-light text-[#2D5BFF]">Schools</h2>
+     <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="/logo.svg" alt="" class="w-[48px]">
+                <img src="/Scholaris.svg" alt="" class="w-[110px]">
       </a>
         <p class="text-[16x] text-[#515356] md:pr-[44%] font-[poppins]">Transform Your School’s Digital Presence & Admissions</p>
       </div>
@@ -501,6 +502,29 @@
         All rights reserved.</p>
     </div>
   </footer>
+  <script>
+    document.addEventListener('alpine:init', () => {
+    Alpine.store('accordion', {
+      tab: 0
+    });
+
+    Alpine.data('accordion', (idx) => ({
+      init() {
+        this.idx = idx;
+      },
+      idx: -1,
+      handleClick() {
+        this.$store.accordion.tab = this.$store.accordion.tab === this.idx ? 0 : this.idx;
+      },
+      handleRotate() {
+        return this.$store.accordion.tab === this.idx ? 'rotate-180' : '';
+      },
+      handleToggle() {
+        return this.$store.accordion.tab === this.idx ? `max-height: ${this.$refs.tab.scrollHeight}px` : '';
+      }
+    }));
+  })
+  </script>
 </body>
 <script type="module" src="/src/script.js"></script>
 </html>
