Change pinnacl schools scholaris

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-  <title>pinnacl-schools-website</title>
+  <title>Scholaris Website</title>
 </head>
 
 <body>
@@ -100,7 +100,7 @@
           <h1
             class="text-[50px] md:text-[61px] font-semibold tracking-tight text-balance bg-[linear-gradient(90deg,#2D5BFF_0%,#00488E_100%)] bg-clip-text text-transparent sm:text-7xl hover font-[montserrat]">
             Transform Your School's Digital Presence & Admissions </h1>
-          <p class="text-[24px] text-[#2E2E2E] pt-[28px] md:pr-[100px] font-[poppins]">Pinnacl Schools equips every
+          <p class="text-[24px] text-[#2E2E2E] pt-[28px] md:pr-[100px] font-[poppins]">Scholaris equips every
             registered school with a custom-built professional website and an integrated admissions management system –
             designed for simplicity, efficiency, and growth.</p>
         </div>
@@ -136,7 +136,7 @@
   <div class="max-w-screen-lg mx-auto px-4">
     <p
       class="text-base sm:text-lg md:text-xl lg:text-[20px] font-normal text-[#F9FAFB] text-center leading-relaxed font-[poppins]">
-      Pinnacl Schools provide every African school with a custom-built, professional website that seamlessly integrates
+      Scholaris provides every African school with a custom-built, professional website that seamlessly integrates
       admissions management, creating a unified digital presence that serves both marketing and operational needs.
     </p>
   </div>
@@ -272,7 +272,7 @@
   <!--Benefits-->
   <section class="p-4 w-full bg-[#00509E] flex h-[620px] md:h-[400px] justify-center items-center gap-[10px]">
     <div class="flex flex-col md:flex-row items-start gap-16 md:gap-[200px]">
-      <p class="text-[36px] md:text-[40px] font-[montserrat] text-[#E6EEF5] font-medium md:w-[450px]">Benefits of Pinnacl Schools</p>
+      <p class="text-[36px] md:text-[40px] font-[montserrat] text-[#E6EEF5] font-medium md:w-[450px]">Benefits of Scholaris</p>
       <div class="flex flex-col items-start gap-[32px] ">
         <div class="flex flex-row gap-[30px]">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5"
@@ -498,7 +498,7 @@
       </div>
     </div>
     <div class="border-t-1 border-t-[#B0C9E1] mx-auto">
-      <p class="text-[#515356] text-[16px] flex justify-center max-w-screen-xl mx-auto py-10 font-[poppins]">Copyright © 2025 Pinnacl.
+      <p class="text-[#515356] text-[16px] flex justify-center max-w-screen-xl mx-auto py-10 font-[poppins]">Copyright © 2025 Scholaris.
         All rights reserved.</p>
     </div>
   </footer>
